--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,7 +15,7 @@ body {
 }
 
 .container {
-  width: 60%;
+  width: 90%;
   margin: 0 auto;
 }
 
@@ -56,7 +56,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 25% 0%;
+  padding: 10% 0%;
   background-color: #f7f7f7;
   position: relative;
 }
@@ -110,6 +110,10 @@ body {
 }
 
 @media screen and (min-width: 1024px) {
+  .container {
+    width: 60%;
+  }
+
   .app-description {
     flex-direction: row;
     align-items: flex-start;
@@ -285,8 +289,7 @@ body {
 
 .disclaimer {
   padding: 50px 0 10px 0;
-
-  font-size: 1.2em;
+  font-size: 1em;
 }
 
 .disclaimer > div h2 {
@@ -294,16 +297,41 @@ body {
 }
 
 .disclaimer > div p {
-  padding: 0 30px;
+  padding: 0 10px;
   line-height: 33px;
   margin: 0 auto;
+  text-align: justify;
 }
 
 .disclaimer-list {
+  list-style-type: "⭐"; 
   flex-direction: row;
   justify-content: center;
   line-height: 42px;
-  padding: 0 40px;
+  padding: 0 20px;
+}
+
+.disclaimer-list li:first-child {
+  padding: 0 0 30px 20px;
+}
+
+.disclaimer-list li {
+  padding: 30px 0 30px 20px;
+  border-bottom: 1px solid #dedede;
+}
+
+@media screen and (min-width: 1024px) {
+  .disclaimer {
+    font-size: 1.2em;
+  }
+
+  .disclaimer > div p {
+    text-align: left;
+  }
+
+  .disclaimer-list {
+    padding: 0 40px;
+  }
 }
 
 .contato {
